Working on event listing

--- a/Cooleaf/Application Controllers/NPEventListViewController/NPEventListViewController.xib
+++ b/Cooleaf/Application Controllers/NPEventListViewController/NPEventListViewController.xib
@@ -20,6 +20,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="f46-4E-sRG"/>
+                        <outlet property="delegate" destination="-1" id="HAV-mY-US2"/>
+                    </connections>
                 </tableView>
                 <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="HWM-cw-70A">
                     <rect key="frame" x="142" y="265" width="37" height="37"/>
