--- a/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
+++ b/Cooleaf/Application Controllers/NPProfileViewController/NPProfileViewController.xib
@@ -9,6 +9,7 @@
                 <outlet property="avatarView" destination="R8Z-fZ-DcX" id="eDI-jy-bdF"/>
                 <outlet property="nameLabel" destination="X5U-08-nAu" id="YP4-hM-BVS"/>
                 <outlet property="positionLabel" destination="jrp-0I-Xt6" id="NyR-h9-b16"/>
+                <outlet property="tagsLabel" destination="WcT-Dt-8mV" id="c9S-lS-LTE"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -32,6 +33,16 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.58039215686274503" green="0.58039215686274503" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="WcT-Dt-8mV">
+                    <rect key="frame" x="20" y="277" width="280" height="59"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <string key="text">#HASHTAG1
+#HASHTAG2
+#HASHTAG3</string>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                    <color key="textColor" red="0.43137254899999999" green="0.81960784310000001" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
