--- a/Cooleaf/Application Controllers/NPEventViewController/NPEventViewController.xib
+++ b/Cooleaf/Application Controllers/NPEventViewController/NPEventViewController.xib
@@ -30,6 +30,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="RgS-Ea-SYL"/>
+                        <outlet property="delegate" destination="-1" id="B67-5g-ilc"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -38,7 +42,7 @@
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
         <view autoresizesSubviews="NO" contentMode="scaleToFill" id="Ftt-dP-KEn" userLabel="Table header view">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="CoverPhotoPlaceholder" id="2R6-wy-Wxd">
