Implementing adding todos

--- a/Cooleaf/Application Controllers/NPTodoViewController/NPTodoViewController.xib
+++ b/Cooleaf/Application Controllers/NPTodoViewController/NPTodoViewController.xib
@@ -16,16 +16,16 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fmw-nM-y3Z">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="fmw-nM-y3Z">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.97254901959999995" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="23o-3l-4P8"/>
                         <outlet property="delegate" destination="-1" id="iSZ-64-Kkm"/>
                     </connections>
                 </tableView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="y84-fl-DG5">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="y84-fl-DG5">
                     <rect key="frame" x="20" y="103" width="280" height="96"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <string key="text">The list is empty.
@@ -37,6 +37,13 @@ If there is something that needs to be done for this event, you can add it.</str
                 </label>
             </subviews>
             <color key="backgroundColor" red="0.97254901959999995" green="0.96470588239999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="fmw-nM-y3Z" firstAttribute="centerX" secondItem="y84-fl-DG5" secondAttribute="centerX" id="02X-H5-5kz"/>
+                <constraint firstAttribute="bottom" secondItem="fmw-nM-y3Z" secondAttribute="bottom" id="RpP-Xd-FQP"/>
+                <constraint firstItem="fmw-nM-y3Z" firstAttribute="top" secondItem="1" secondAttribute="top" id="VQd-Qa-7h5"/>
+                <constraint firstItem="fmw-nM-y3Z" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="gWU-Yy-wrq"/>
+                <constraint firstAttribute="trailing" secondItem="fmw-nM-y3Z" secondAttribute="trailing" id="tI5-Jv-sY3"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
